Connected and loaded data

--- a/Class_Backlog.ipynb
+++ b/Class_Backlog.ipynb
@@ -1939,6 +1939,83 @@
     "\n",
     "df.isnull()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import sqlalchemy as sa\n",
+    "from sqlalchemy import create_engine, text\n",
+    "import pandas as pd \n",
+    "import matplotlib.pyplot as mp"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'2.0.38'"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "sa.__version__"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# credentials for the database\n",
+    "\n",
+    "HOST = \"20.218.241.192:3306\"\n",
+    "DB_NAME = \"sakila\"\n",
+    "USERNAME = \"dapLearner\"\n",
+    "PASSWORD = \"$qlQu3ry&B!gData\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# connection creation\n",
+    "\n",
+    "engine = create_engine(f\"mysql+mysqldb://{USERNAME}:{PASSWORD}@{HOST}/{DB_NAME}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Engine(mysql+mysqldb://dapLearner:***@20.218.241.192:3306/sakila)"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "engine"
+   ]
   }
  ],
  "metadata": {
