--- a/Python_Basis.ipynb
+++ b/Python_Basis.ipynb
@@ -2,21 +2,125 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "vscode": {
-     "languageId": "plaintext"
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Audi\n",
+      "BMW\n",
+      "Benz\n",
+      "Toyota\n"
+     ]
     }
-   },
-   "outputs": [],
+   ],
    "source": [
-    "print(\"kakuarmoo\")"
+    "cars = ['audi', 'bmw', 'benz', 'toyota']\n",
+    "\n",
+    "for car in cars:\n",
+    "    if car == 'bmw':\n",
+    "        print(car.upper())\n",
+    "    else:\n",
+    "        print(car.title())\n",
+    "\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# if case matters and you are making a comparison, it would be best to convert the value of the variable into eg a lowercase before making the comparison\n",
+    "car = 'Audi'\n",
+    "\n",
+    "car.lower() == 'audi'\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'Audi'"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "car"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Ja, that's my hometown!\n"
+     ]
+    }
+   ],
+   "source": [
+    "# testing for inequality\n",
+    "\n",
+    "#hometowm = 'Nralechie' - this makes the variable static\n",
+    "hometown = input(\"Please, enter the town name\") # this is making the variable dynamic \n",
+    "\n",
+    "if hometown != 'Nralechie':\n",
+    "    print(\"That's not my hometown\")\n",
+    "else:\n",
+    "    print(\"Ja, that's my hometown!\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": "Python 3",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.13.0"
   }
  },
  "nbformat": 4,
